# gitplorer

./: .gitignore  .gitplorer.toml  CLAUDE.md  README.md  main.py  prompt.txt  pyproject.toml
.superpowers/brainstorm/1458-1778792350/content/: panel-content.html  panel-visibility.html
.superpowers/brainstorm/1458-1778792350/state/: server-stopped
docs/superpowers/plans/: 2026-05-14-repo-panel.md
docs/superpowers/specs/: 2026-05-14-repo-panel-design.md
gitplorer/: app.py  collector.py  config.py
wiki/: index.md  log.md
wiki/concepts/: Dirty-tracking.md  Remote-synchronization.md  Repository-scanning.md
wiki/decisions/: Project-wide-architecture.md
wiki/entities/: Collector.md  GitplorerApp.md  RepoDetailScreen.md  RepoInfo.md
