[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gitplorer"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "textual>=0.50",
]

[project.scripts]
gitplorer = "gitplorer.app:main"

[tool.hatch.build.targets.wheel]
packages = ["gitplorer"]
